# evaluation

./: .gitignore  README.md  belebele-batched.py  belebele.py  forecast_tool.py  model_utils.py  pyproject.toml  task_analysis.json
belebele/: analysis.py  belebele-batched.py
docs/: post_first_analysis.md
legalbench/: analysis.ipynb  analyze_tasks.py  evaluation.py  legalbench-extract.py  legalbench.py  legalbench_task_analysis.json  overview.md
legalbench/results/: legalbench-abercrombie-EuroLLM-1.7B_eng_Latn.json  legalbench-abercrombie-EuroLLM-9B_eng_Latn.json  legalbench-abercrombie-Mistral-7B-Instruct-v0.3_eng_Latn.json  legalbench-abercrombie-Mistral-7B-v0.1_eng_Latn.json  legalbench-abercrombie-OLMo-2-1124-13B-Instruct_eng_Latn.json  legalbench-abercrombie-OLMo-2-1124-13B_eng_Latn.json  legalbench-abercrombie-OLMo-2-1124-7B-Instruct_eng_Latn.json  legalbench-abercrombie-OLMo-2-1124-7B_eng_Latn.json  legalbench-abercrombie-SmolLM3-3B-Base_eng_Latn.json  legalbench-abercrombie-SmolLM3-3B_eng_Latn.json  legalbench-abercrombie-gemma-3-12b-it_eng_Latn.json  legalbench-abercrombie-gemma-3-12b-pt_eng_Latn.json  legalbench-abercrombie-gemma-3-1b-it_eng_Latn.json  legalbench-abercrombie-gemma-3-1b-pt_eng_Latn.json  legalbench-abercrombie-gemma-3-4b-it_eng_Latn.json  legalbench-abercrombie-gemma-3-4b-pt_eng_Latn.json  legalbench-abercrombie-hplt2c_eng_checkpoints_eng_Latn.json  (+48 more)
multilingual_agent/: README.md  agent.py  evaluate.py  visualization.ipynb  weather-api.ipynb
prompts/: correct_date_in_answers.txt  create_agent_evaluation_dataset.txt  legalbench_tasks.txt
(+50 files in other folders)
