[project]
name = "belebele-llama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.9.0",
    "datasets>=4.0.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.54.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
