[project]
name = "evaluation"
version = "0.1.0"
description = "A collection of LLM evaluations for Nodehaus"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.9.0",
    "datasets==3.6.0",
    "nltk>=3.9.1",
    "peft>=0.17.1",
    "plotly>=6.2.0",
    "protobuf>=6.31.1",
    "scikit-learn>=1.7.1",
    "sentencepiece>=0.2.0",
    "streamlit>=1.48.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.54.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
